--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'org.jsoup:jsoup:1.6.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.1'
+    compile 'org.hibernate:hibernate-core:4.3.7.Final'
 
     testCompile 'junit:junit:4.12'
 }
