Add spring MVC jetty and webapp folder.

--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,17 @@ apply plugin: 'eclipse-wtp'
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'war'
+apply plugin: 'jetty'
+
+// Uses JDK 7
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 repositories {
     mavenLocal()
     mavenCentral()
+    maven { url "https://repo.spring.io/libs-release" }
 }
 
 dependencies {
@@ -15,17 +22,13 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.1'
     compile 'mysql:mysql-connector-java:5.1.34'
     compile 'org.hibernate:hibernate-core:4.3.7.Final'
+    compile 'org.springframework:spring-webmvc:4.1.4.RELEASE'
+    compile 'jstl:jstl:1.2'
+
+    providedCompile 'javax.servlet:servlet-api:2.5'
+    runtime 'javax.servlet:jstl:1.1.2'
 
     testCompile 'junit:junit:4.12'
-}
-
-jar {
-    baseName = 'matrixspider'
-    version =  '0.1.0'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    manifest {
-        attributes 'Main-Class': 'com.onecampus.service.Demo'
-    }
 }
 
 task createJavaProject << {
@@ -36,4 +39,8 @@ task createJavaProject << {
 task createWebProject(dependsOn: 'createJavaProject') << {
     def webAppDir = file("$webAppDirName")
     webAppDir.mkdirs()
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.2.1'
 }
