--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,11 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.34'
     compile 'org.hibernate:hibernate-core:4.3.7.Final'
     compile 'org.springframework:spring-webmvc:4.1.4.RELEASE'
+    compile 'org.springframework:spring-context:4.1.4.RELEASE'
     compile 'jstl:jstl:1.2'
+
+    compile 'org.slf4j:slf4j-api:1.7.9'
+    compile 'org.slf4j:slf4j-jdk14:1.7.9'
 
     providedCompile 'javax.servlet:servlet-api:2.5'
     runtime 'javax.servlet:jstl:1.1.2'
