--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'org.springframework:spring-webmvc:4.1.4.RELEASE'
     compile 'org.springframework:spring-context:4.1.4.RELEASE'
     compile 'jstl:jstl:1.2'
+    compile 'dom4j:dom4j:1.6.1'
+    compile 'org.apache.httpcomponents:httpclient:4.3.6'
 
     compile 'org.slf4j:slf4j-api:1.7.9'
     compile 'org.slf4j:slf4j-jdk14:1.7.9'
